Fix button alignment in firefox.

--- a/resources/public/css/fonts.css
+++ b/resources/public/css/fonts.css
@@ -31,4 +31,3 @@
 body, button { font-family: OpenSans; font-weight: 300; }
 body { font-size: 1.5em; }
 button { font-size: 1em; }
-.legal { font-size: 0.5em; }
